--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
-		"babel-plugin-css-modules-transform": "^1.6.2",
 		"babel-preset-es2015": "^6.24.1",
 		"grunt": "^1.0.3",
 		"grunt-contrib-concat": "^0.5.0",
-		"grunt-contrib-watch": "^1.1.0"
-	},
-	"dependencies": {
-		"@babel/core": "^7.2.2",
-		"@babel/preset-env": "^7.3.1",
-		"grunt-babel": "^8.0.0",
-		"save": "^2.3.3"
+		"grunt-contrib-watch": "^1.1.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "grunt-babel": "^8.0.0",
+    "save": "^2.3.3"
 	}
 }
